Revert "Update sherlock-platform to IntelliJ idea/251.26094.121 (#166)"
This reverts commit 854ce640269d6be52028226f600fe66fea5b2135.