@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.roots.ui.configuration.projectRoot;
 
 import com.intellij.CommonBundle;
@@ -18,8 +18,8 @@ import com.intellij.ide.util.projectWizard.NamePathComponent;
 import com.intellij.ide.util.projectWizard.ProjectWizardUtil;
 import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.extensions.BaseExtensionPointName;
-import com.intellij.openapi.module.*;
 import com.intellij.openapi.module.Module;
+import com.intellij.openapi.module.*;
 import com.intellij.openapi.options.Configurable;
 import com.intellij.openapi.options.ConfigurationException;
 import com.intellij.openapi.project.DumbAware;
@@ -44,34 +44,32 @@ import com.intellij.openapi.util.NullableComputable;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.NioFiles;
-import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.pointers.VirtualFilePointerManager;
-import com.intellij.platform.eel.EelDescriptor;
-import com.intellij.platform.eel.provider.EelProviderUtil;
 import com.intellij.ui.navigation.Place;
 import com.intellij.util.PlatformIcons;
 import com.intellij.util.concurrency.ThreadingAssertions;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.tree.TreeUtil;
-import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
 import javax.swing.tree.*;
+import java.awt.*;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.List;
 import java.util.*;
 import java.util.function.Predicate;
 
-public final class ModuleStructureConfigurable extends BaseStructureConfigurable implements Place.Navigator, Configurable.WithEpDependencies {
+public class ModuleStructureConfigurable extends BaseStructureConfigurable implements Place.Navigator, Configurable.WithEpDependencies {
   private static final Comparator<MyNode> NODE_COMPARATOR = (o1, o2) -> {
     final NamedConfigurable<?> configurable1 = o1.getConfigurable();
     final NamedConfigurable<?> configurable2 = o2.getConfigurable();
@@ -128,8 +126,9 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     myTree.setRootVisible(false);
   }
 
+  @NotNull
   @Override
-  protected @NotNull String getTextForSpeedSearch(MyNode node) {
+  protected String getTextForSpeedSearch(MyNode node) {
     if (node instanceof ModuleNode) {
       return ((ModuleNode)node).getFullModuleName();
     }
@@ -155,7 +154,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
   }
 
   @Override
-  protected @NotNull ArrayList<AnAction> createActions(final boolean fromPopup) {
+  @NotNull
+  protected ArrayList<AnAction> createActions(final boolean fromPopup) {
     final ArrayList<AnAction> result = super.createActions(fromPopup);
     if (fromPopup) {
       result.add(Separator.getInstance());
@@ -170,8 +170,9 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
   }
 
   @Override
-  protected @NotNull List<? extends AnAction> createCopyActions(boolean fromPopup) {
-    return List.of(new MyCopyAction());
+  @NotNull
+  protected List<? extends AnAction> createCopyActions(boolean fromPopup) {
+    return Collections.singletonList(new MyCopyAction());
   }
 
   @Override
@@ -183,8 +184,9 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     myUiDisposed = false;
   }
 
+  @NotNull
   @Override
-  protected @NotNull Collection<? extends ProjectStructureElement> getProjectStructureElements() {
+  protected Collection<? extends ProjectStructureElement> getProjectStructureElements() {
     final List<ProjectStructureElement> result = new ArrayList<>();
     for (Module module : myModuleManager.getModules()) {
       result.add(new ModuleProjectStructureElement(myContext, module));
@@ -202,6 +204,7 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
   }
 
+
   @Override
   protected boolean isAutoScrollEnabled() {
     return myAutoScrollEnabled;
@@ -214,7 +217,7 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
 
   @Override
   public @NotNull Collection<BaseExtensionPointName<?>> getDependencies() {
-    return List.of(ModuleStructureExtension.EP_NAME);
+    return Collections.singletonList(ModuleStructureExtension.EP_NAME);
   }
 
   private void updateModuleEditorSelection(final NamedConfigurable configurable) {
@@ -229,14 +232,14 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
   }
 
+
   private void createProjectNodes() {
     ModuleGrouper moduleGrouper = getModuleGrouper();
     ModuleGroupingTreeHelper<Module, MyNode> helper = ModuleGroupingTreeHelper.forEmptyTree(!myHideModuleGroups && !myFlattenModules,
                                                                                     ModuleGroupingTreeHelper.createDefaultGrouping(moduleGrouper),
                                                                                     ModuleStructureConfigurable::createModuleGroupNode,
                                                                                     m -> createModuleNode(m, moduleGrouper), getNodeComparator());
-    var modules = Arrays.stream(myModuleManager.getModules()).filter(module -> ModuleStructureFilterExtension.isAllowed(module)).toList();
-    helper.createModuleNodes(modules, myRoot, getTreeModel());
+    helper.createModuleNodes(Arrays.asList(myModuleManager.getModules()), myRoot, getTreeModel());
     if (containsSecondLevelNodes(myRoot)) {
       myTree.setShowsRootHandles(true);
     }
@@ -246,6 +249,11 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
 
     addRootNodesFromExtensions(myRoot, myProject);
+    //final LibraryTable table = LibraryTablesRegistrar.getInstance().getLibraryTable(myProject);
+    //final LibrariesModifiableModel projectLibrariesProvider = new LibrariesModifiableModel(table);
+    //myLevel2Providers.put(LibraryTablesRegistrar.PROJECT_LEVEL, projectLibrariesProvider);
+    //
+    //myProjectNode.add(myLevel2Nodes.get(LibraryTablesRegistrar.PROJECT_LEVEL));
   }
 
   private static boolean containsSecondLevelNodes(TreeNode rootNode) {
@@ -259,7 +267,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     return false;
   }
 
-  private @NotNull ModuleNode createModuleNode(Module module, ModuleGrouper moduleGrouper) {
+  @NotNull
+  private ModuleNode createModuleNode(Module module, ModuleGrouper moduleGrouper) {
     ModuleConfigurable configurable = new ModuleConfigurable(myContext.myModulesConfigurator, module, TREE_UPDATER, moduleGrouper);
     List<String> groupPath = moduleGrouper.getModuleAsGroupPath(module);
     ModuleNode node = new ModuleNode(configurable, groupPath != null ? new ModuleGroup(groupPath) : null);
@@ -268,7 +277,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     return node;
   }
 
-  private static @NotNull MyNode createModuleGroupNode(ModuleGroup moduleGroup) {
+  @NotNull
+  private static MyNode createModuleGroupNode(ModuleGroup moduleGroup) {
     final NamedConfigurable<?> moduleGroupConfigurable = new TextConfigurable<>(moduleGroup, moduleGroup.toString(),
                                                                                 JavaUiBundle.message("module.group.banner.text",
                                                                                                       moduleGroup.toString()),
@@ -308,7 +318,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     return (DefaultTreeModel)myTree.getModel();
   }
 
-  private @NotNull ModuleGroupingTreeHelper<Module, MyNode> createGroupingHelper(Predicate<? super MyNode> nodeToBeMovedFilter) {
+  @NotNull
+  private ModuleGroupingTreeHelper<Module, MyNode> createGroupingHelper(Predicate<? super MyNode> nodeToBeMovedFilter) {
     ModuleGrouper grouper = getModuleGrouper();
     ModuleGroupingImplementation<Module> grouping = ModuleGroupingTreeHelper.createDefaultGrouping(grouper);
     return ModuleGroupingTreeHelper.forTree(myRoot, node -> node instanceof ModuleGroupNode ? ((ModuleGroupNode)node).getModuleGroup() : null,
@@ -405,14 +416,10 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
   @Override
   public void dispose() {}
 
+  @NotNull
   @Override
-  public @NotNull JComponent createComponent() {
-    return UiDataProvider.wrapComponent(super.createComponent(), sink -> {
-      sink.set(LangDataKeys.MODULE_CONTEXT_ARRAY, getModuleContexts());
-      sink.set(LangDataKeys.MODULE_CONTEXT, getSelectedModule());
-      sink.set(LangDataKeys.MODIFIABLE_MODULE_MODEL, myContext.myModulesConfigurator.getModuleModel());
-      sink.set(PlatformCoreDataKeys.SELECTED_ITEM, getSelectedObject());
-    });
+  public JComponent createComponent() {
+    return new MyDataProviderWrapper(super.createComponent());
   }
 
   @Override
@@ -421,7 +428,9 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
   }
 
   @Override
-  public @NonNls @NotNull String getHelpTopic() {
+  @Nullable
+  @NonNls
+  public String getHelpTopic() {
     final String topic = super.getHelpTopic();
     if (topic != null) {
       return topic;
@@ -522,7 +531,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     myTree.repaint();
   }
 
-  public @Nullable MyNode findModuleNode(final Module module) {
+  @Nullable
+  public MyNode findModuleNode(final Module module) {
     return findNodeByObject(myRoot, module);
   }
 
@@ -563,9 +573,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
       modules = myContext.myModulesConfigurator.addNewModule(basePath);
     }
     if (modules != null && !modules.isEmpty()) {
-      EelDescriptor eelDescriptor = Registry.is("java.home.finder.use.eel") ? EelProviderUtil.getEelDescriptor(myProject) : null;
       //new module wizard may add yet another SDK to the project
-      myProjectStructureConfigurable.getProjectJdksModel().syncSdks(eelDescriptor);
+      myProjectStructureConfigurable.getProjectJdksModel().syncSdks();
       for (Module module : modules) {
         addModuleNode(module);
       }
@@ -602,7 +611,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     daemonAnalyzer.queueUpdateForAllElementsWithErrors(); //missing modules added
   }
 
-  public @Nullable Module getSelectedModule() {
+  @Nullable
+  public Module getSelectedModule() {
     final Object selectedObject = getSelectedObject();
     if (selectedObject instanceof Module) {
       return (Module)selectedObject;
@@ -617,11 +627,14 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
   }
 
   @Override
-  public @NotNull @NonNls String getId() {
+  @NotNull
+  @NonNls
+  public String getId() {
     return "project.structure";
   }
 
-  public @Nullable Module getModule(final String moduleName) {
+  @Nullable
+  public Module getModule(final String moduleName) {
     if (moduleName == null) return null;
     return myContext != null && myContext.myModulesConfigurator != null
            ? myContext.myModulesConfigurator.getModule(moduleName)
@@ -660,8 +673,9 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
       return myModuleAsGroup;
     }
 
+    @NotNull
     @Override
-    public @NotNull String getDisplayName() {
+    public String getDisplayName() {
       if (myFlattenModules) {
         return getFullModuleName();
       }
@@ -675,7 +689,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
       return getModuleGrouper().getShortenedName(getModule(), parentGroupName);
     }
 
-    private @NotNull String getFullModuleName() {
+    @NotNull
+    private String getFullModuleName() {
       return myContext.myModulesConfigurator.getModuleModel().getActualName(getModule());
     }
 
@@ -720,8 +735,9 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
       myModuleGroup = moduleGroup;
     }
 
+    @NotNull
     @Override
-    public @NotNull String getDisplayName() {
+    public String getDisplayName() {
       List<String> parentGroupPath;
       if (parent instanceof ModuleGroupNode) {
         ModuleGroup parentGroup = ((ModuleGroupNode)parent).getModuleGroup();
@@ -740,7 +756,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
 
     @Override
-    public @NotNull ModuleGroup getModuleGroup() {
+    @NotNull
+    public ModuleGroup getModuleGroup() {
       return myModuleGroup;
     }
   }
@@ -789,31 +806,46 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
   }
 
-  private Module @Nullable [] getModuleContexts() {
-    final TreePath[] paths = myTree.getSelectionPaths();
-    Set<Module> modules = new LinkedHashSet<>();
-    if (paths != null) {
-      for (TreePath path : paths) {
-        MyNode node = (MyNode)path.getLastPathComponent();
-        final NamedConfigurable<?> configurable = node.getConfigurable();
-        LOG.assertTrue(configurable != null, "already disposed");
-        final Object o = configurable.getEditableObject();
-        if (o instanceof Module) {
-          modules.add((Module)o);
-        }
-        else if (node instanceof ModuleGroupNode && ((ModuleGroupNode)node).getModuleGroup() != null) {
-          TreeUtil.treeNodeTraverser(node).forEach(descendant -> {
-            if (descendant instanceof MyNode) {
-              Object object = ((MyNode)descendant).getConfigurable().getEditableObject();
-              if (object instanceof Module) {
-                modules.add((Module)object);
+  private class MyDataProviderWrapper extends JPanel implements UiDataProvider {
+    MyDataProviderWrapper(final JComponent component) {
+      super(new BorderLayout());
+      add(component, BorderLayout.CENTER);
+    }
+
+    @Override
+    public void uiDataSnapshot(@NotNull DataSink sink) {
+      sink.set(LangDataKeys.MODULE_CONTEXT_ARRAY, getModuleContexts());
+      sink.set(LangDataKeys.MODULE_CONTEXT, getSelectedModule());
+      sink.set(LangDataKeys.MODIFIABLE_MODULE_MODEL, myContext.myModulesConfigurator.getModuleModel());
+      sink.set(PlatformCoreDataKeys.SELECTED_ITEM, getSelectedObject());
+    }
+
+    private Module @Nullable [] getModuleContexts() {
+      final TreePath[] paths = myTree.getSelectionPaths();
+      Set<Module> modules = new LinkedHashSet<>();
+      if (paths != null) {
+        for (TreePath path : paths) {
+          MyNode node = (MyNode)path.getLastPathComponent();
+          final NamedConfigurable<?> configurable = node.getConfigurable();
+          LOG.assertTrue(configurable != null, "already disposed");
+          final Object o = configurable.getEditableObject();
+          if (o instanceof Module) {
+            modules.add((Module)o);
+          }
+          else if (node instanceof ModuleGroupNode && ((ModuleGroupNode)node).getModuleGroup() != null) {
+            TreeUtil.treeNodeTraverser(node).forEach(descendant -> {
+              if (descendant instanceof MyNode) {
+                Object object = ((MyNode)descendant).getConfigurable().getEditableObject();
+                if (object instanceof Module) {
+                  modules.add((Module)object);
+                }
               }
-            }
-          });
+            });
+          }
         }
       }
+      return !modules.isEmpty() ? modules.toArray(Module.EMPTY_ARRAY) : null;
     }
-    return !modules.isEmpty() ? modules.toArray(Module.EMPTY_ARRAY) : null;
   }
 
   private class HideGroupsAction extends ToggleAction implements DumbAware {
@@ -822,7 +854,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
 
     @Override
-    public void update(final @NotNull AnActionEvent e) {
+    public void update(@NotNull
+                       final AnActionEvent e) {
       super.update(e);
       final Presentation presentation = e.getPresentation();
       String text = JavaUiBundle
@@ -868,7 +901,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
   protected AbstractAddGroup createAddAction(boolean fromPopup) {
     return new AbstractAddGroup(JavaUiBundle.message("add.new.header.text")) {
       @Override
-      public AnAction @NotNull [] getChildren(final @Nullable AnActionEvent e) {
+      public AnAction @NotNull [] getChildren(@Nullable
+                                    final AnActionEvent e) {
 
         AnAction addModuleAction = new AddModuleAction(false, fromPopup);
         addModuleAction.getTemplatePresentation().setText(JavaUiBundle.message("action.text.new.module"));
@@ -915,7 +949,8 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
   }
 
   @Override
-  protected @NotNull String getEmptySelectionString() {
+  @Nullable
+  protected String getEmptySelectionString() {
     return JavaUiBundle.message("empty.module.selection.string");
   }
 
@@ -925,7 +960,7 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
 
     @Override
-    public void actionPerformed(final @NotNull AnActionEvent e) {
+    public void actionPerformed(@NotNull final AnActionEvent e) {
       NamedConfigurable<?> namedConfigurable = getSelectedConfigurable();
       if (!(namedConfigurable instanceof ModuleConfigurable)) {
         copyByExtension(namedConfigurable);
@@ -997,7 +1032,7 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
 
     @Override
-    public void update(final @NotNull AnActionEvent e) {
+    public void update(@NotNull final AnActionEvent e) {
       TreePath[] selectionPaths = myTree.getSelectionPaths();
       if (selectionPaths == null || selectionPaths.length != 1) {
         e.getPresentation().setEnabled(false);
@@ -1014,11 +1049,10 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
   }
 
-  @ApiStatus.Internal
-  public static final class CopiedModuleBuilder extends ModuleBuilder {
-    private final @NotNull ModifiableRootModel myRootModel;
-    private final @NotNull Path myComponentPath;
-    private final @NotNull Project myProject;
+  static final class CopiedModuleBuilder extends ModuleBuilder {
+    @NotNull private final ModifiableRootModel myRootModel;
+    @NotNull private final Path myComponentPath;
+    @NotNull private final Project myProject;
 
     CopiedModuleBuilder(@NotNull ModifiableRootModel rootModel, @NotNull Path componentPath, @NotNull Project project) {
       this.myRootModel = rootModel;
@@ -1080,12 +1114,12 @@ public final class ModuleStructureConfigurable extends BaseStructureConfigurable
     }
 
     @Override
-    public void actionPerformed(final @NotNull AnActionEvent e) {
+    public void actionPerformed(@NotNull final AnActionEvent e) {
       addModule(myImport, myDetectModuleBase);
     }
   }
 
-  private static final class MergingComparator<T> implements Comparator<T> {
+  private static class MergingComparator<T> implements Comparator<T> {
     private final List<? extends Comparator<T>> myDelegates;
 
     MergingComparator(final List<? extends Comparator<T>> delegates) {
