@@ -41,6 +41,7 @@ import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -57,9 +58,6 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
     "synchronizedSortedMap", "synchronizedSortedSet");
   private static final CallMatcher DERIVED = CallMatcher.anyOf(
     CollectionUtils.DERIVED_COLLECTION,
-    CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_COLLECTION, "iterator").parameterCount(0),
-    CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_LIST, "listIterator").parameterCount(0),
-    CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_LIST, "listIterator").parameterTypes("int"),
     CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_LIST, "subList"),
     CallMatcher.instanceCall("java.util.SortedMap", "headMap", "tailMap", "subMap"),
     CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_SORTED_SET, "headSet", "tailSet", "subSet"));
@@ -73,19 +71,6 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
   private static final @NonNls Set<String> COLLECTIONS_UPDATES = Set.of("addAll", "fill", "copy", "replaceAll", "sort");
   private static final Set<String> COLLECTIONS_ALL =
     StreamEx.of(COLLECTIONS_QUERIES).append(COLLECTIONS_UPDATES).toImmutableSet();
-  private static final @NotNull CallMatcher QUERY_ITERATOR_METHODS =
-    CallMatcher.anyOf(
-      CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_ITERATOR, "hasNext", "next", "forEachRemaining"),
-      CallMatcher.instanceCall("java.util.ListIterator", "hasPrevious", "previous", "nextIndex", "previousIndex")
-    );
-  private static final @NotNull CallMatcher NO_UPDATE_FOR_EMPTY =
-    CallMatcher.anyOf(
-      CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_ITERATOR, "remove").parameterCount(0),
-      CallMatcher.instanceCall("java.util.ListIterator", "set").parameterCount(1),
-      CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_COLLECTION, "remove", "clear", "removeAll", "retainAll", "removeIf"),
-      CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_LIST, "sort", "replaceAll"),
-      CallMatcher.instanceCall(CommonClassNames.JAVA_UTIL_MAP, "replaceAll", "replace", "remove")
-    );
   private static final Set<String> defaultQueryNames =
     Set.of("contains", "copyInto", "equals", "forEach", "get", "hashCode", "indexOf", "iterator", "lastIndexOf", "parallelStream", "peek",
            "propertyNames", "save", "size", "store", "stream", "toArray", "toString", "write");
@@ -100,8 +85,6 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
                                                                                      .toArray(String[]::new));
   @SuppressWarnings("PublicField")
   public final ExternalizableStringSet ignoredClasses = new ExternalizableStringSet();
-
-  private final MismatchedQueryUpdateRunner myRunner = new MismatchedQueryUpdateRunner(queryNames, updateNames, ignoredClasses);
 
   @Override
   public @NotNull OptPane getOptionsPane() {
@@ -124,7 +107,13 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
 
   @Override
   public @NotNull String buildErrorString(Object... infos) {
-    return (String)infos[0];
+    final boolean updated = ((Boolean)infos[0]).booleanValue();
+    if (updated) {
+      return InspectionGadgetsBundle.message("mismatched.update.collection.problem.descriptor.updated.not.queried");
+    }
+    else {
+      return InspectionGadgetsBundle.message("mismatched.update.collection.problem.description.queried.not.updated");
+    }
   }
 
   @Override
@@ -142,84 +131,46 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
     return new MismatchedCollectionQueryUpdateVisitor();
   }
 
-  private record MismatchedQueryUpdateRunner(
-    @NotNull Set<String> queryNames,
-    @NotNull Set<String> updateNames,
-    @NotNull Set<String> ignoredClasses
-  ) {
-    @NotNull QueryUpdateInfo compute(@Nullable PsiVariable variable,
-                                     @Nullable PsiElement context,
-                                     @NotNull Set<PsiReferenceExpression> ignored) {
-      if (context == null) return QueryUpdateInfo.UNKNOWN;
-      if (variable != null && !checkVariable(variable)) {
-        return QueryUpdateInfo.UNKNOWN;
-      }
-      Visitor visitor = new Visitor(variable, queryNames, updateNames, ignored);
-      context.accept(visitor);
-      return visitor.getInfo();
-    }
-
-    @NotNull QueryUpdateInfo compute(@NotNull PsiVariable variable, @NotNull Set<PsiReferenceExpression> ignored) {
-      final PsiElement context = variable instanceof PsiField ? PsiUtil.getTopLevelClass(variable) :
-                                 PsiTreeUtil.getParentOfType(variable, PsiCodeBlock.class);
-      return compute(variable, context, ignored);
-    }
-
-    @NotNull QueryUpdateInfo processSingleRef(@NotNull PsiExpression ref) {
-      Visitor visitor = new Visitor(null, queryNames, updateNames, Set.of());
-      visitor.process(ref);
-      return visitor.getInfo();
-    }
-
-    private boolean checkVariable(@NotNull PsiVariable variable) {
-      if (variable instanceof PsiField field) {
-        if (!field.hasModifierProperty(PsiModifier.PRIVATE)) {
-          PsiClass aClass = field.getContainingClass();
-          if (aClass == null || !aClass.hasModifierProperty(PsiModifier.PRIVATE) || field.hasModifierProperty(PsiModifier.PUBLIC)) {
-            // Public field within private class can be written/read via reflection even without setAccessible hacks,
-            // so we don't analyze such fields to reduce false-positives
-            return false;
-          }
-        }
-      }
-      else if (!(variable instanceof PsiLocalVariable)) {
-        return false;
-      }
-      final PsiType type = variable.getType();
-      if (!CollectionUtils.isCollectionClassOrInterface(type)) {
-        return false;
-      }
-      return !ContainerUtil.exists(ignoredClasses, className -> InheritanceUtil.isInheritor(type, className));
-    }
+  private static QueryUpdateInfo getCollectionQueryUpdateInfo(@Nullable PsiVariable variable,
+                                                              PsiElement context,
+                                                              Set<String> queryNames,
+                                                              Set<String> updateNames) {
+    return getCollectionQueryUpdateInfo(variable, context, queryNames, updateNames, Set.of());
+  }
+  private static QueryUpdateInfo getCollectionQueryUpdateInfo(@Nullable PsiVariable variable,
+                                                              PsiElement context,
+                                                              Set<String> queryNames,
+                                                              Set<String> updateNames,
+                                                              Set<PsiReferenceExpression> ignored) {
+    QueryUpdateInfo info = new QueryUpdateInfo();
+    Visitor visitor = new Visitor(variable, queryNames, updateNames, info, ignored);
+    context.accept(visitor);
+    return info;
   }
 
   private static class Visitor extends JavaRecursiveElementWalkingVisitor {
-    final @Nullable PsiVariable myVariable;
-    final @NotNull Set<PsiVariable> myDerivedVariables = new HashSet<>();
-    final @NotNull Set<String> myQueryNames;
-    final @NotNull Set<String> myUpdateNames;
-    final @NotNull Set<PsiReferenceExpression> myIgnored = new HashSet<>();
-    boolean myQueried;
-    boolean myUpdated;
-    boolean myUpdatedForNonEmpty;
-    boolean myKnownEmpty;
+    final PsiVariable myVariable;
+    final Set<String> myQueryNames;
+    final Set<String> myUpdateNames;
+    final QueryUpdateInfo myInfo;
+    final Set<PsiReferenceExpression> myIgnored = new HashSet<>();
 
     private Visitor(@Nullable PsiVariable variable,
                     @NotNull Set<String> queryNames,
                     @NotNull Set<String> updateNames,
-                    @NotNull Set<PsiReferenceExpression> ignored) {
+                    @NotNull QueryUpdateInfo info) {
       myVariable = variable;
       myQueryNames = queryNames;
       myUpdateNames = updateNames;
-      myIgnored.addAll(ignored);
-      if (variable != null) {
-        myKnownEmpty = definitelyEmptyCollection(variable.getInitializer());
-      }
+      myInfo = info;
     }
-
-    private static boolean definitelyEmptyCollection(@Nullable PsiExpression initializer) {
-      return initializer == null || ExpressionUtils.nonStructuralChildren(initializer)
-        .allMatch(e -> ConstructionUtils.isEmptyCollectionInitializer(e));
+    private Visitor(@Nullable PsiVariable variable,
+                    @NotNull Set<String> queryNames,
+                    @NotNull Set<String> updateNames,
+                    @NotNull QueryUpdateInfo info,
+                    @NotNull Set<PsiReferenceExpression> ignored) {
+      this(variable, queryNames, updateNames, info);
+      myIgnored.addAll(ignored);
     }
 
     @Override
@@ -230,13 +181,8 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
           makeUpdated();
           makeQueried();
         }
-      }
-      else {
-        if (ref.resolve() instanceof PsiVariable target) {
-          if ((target.equals(myVariable) || myDerivedVariables.contains(target)) && !myIgnored.contains(ref)) {
-            process(ref);
-          }
-        }
+      } else if (ref.isReferenceTo(myVariable) && !myIgnored.contains(ref)) {
+        process(findEffectiveReference(ref));
       }
     }
 
@@ -244,37 +190,25 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
     public void visitThisExpression(@NotNull PsiThisExpression expression) {
       super.visitThisExpression(expression);
       if (myVariable == null) {
-        process(expression);
+        process(findEffectiveReference(expression));
       }
     }
 
     private void makeUpdated() {
-      myUpdated = true;
-      if (myQueried) {
+      myInfo.updated = true;
+      if (myInfo.queried) {
         stopWalking();
       }
-    }
-
-    private void makeUpdatedForNonEmpty() {
-      myUpdatedForNonEmpty = true;
     }
 
     private void makeQueried() {
-      myQueried = true;
-      if (myUpdated) {
+      myInfo.queried = true;
+      if (myInfo.updated) {
         stopWalking();
       }
     }
 
-    @NotNull QueryUpdateInfo getInfo() {
-      return new QueryUpdateInfo(myQueried, myUpdated, myUpdatedForNonEmpty, myKnownEmpty);
-    }
-
     private void process(PsiExpression reference) {
-      doProcess(findEffectiveReference(reference));
-    }
-    
-    private void doProcess(PsiExpression reference) {
       PsiMethodCallExpression qualifiedCall = ExpressionUtils.getCallForQualifier(reference);
       if (qualifiedCall != null) {
         processQualifiedCall(qualifiedCall);
@@ -294,10 +228,6 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
         }
         return;
       }
-      if (myVariable != null && parent instanceof PsiLocalVariable derived && !VariableAccessUtils.variableIsAssigned(derived)) {
-        myDerivedVariables.add(derived);
-        return;
-      }
       if (parent instanceof PsiMethodReferenceExpression methodReference) {
         processQualifiedMethodReference(methodReference);
         return;
@@ -307,12 +237,11 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
         return;
       }
       if (parent instanceof PsiAssignmentExpression assignment && assignment.getLExpression() == reference) {
-        process(assignment);
+        process(findEffectiveReference(assignment));
         PsiExpression rValue = assignment.getRExpression();
         if (rValue == null) return;
         if (ExpressionUtils.nonStructuralChildren(rValue)
           .allMatch(MismatchedCollectionQueryUpdateInspection::isEmptyCollectionInitializer)) {
-          myKnownEmpty = myKnownEmpty && definitelyEmptyCollection(rValue);
           return;
         }
         if (ExpressionUtils.nonStructuralChildren(rValue)
@@ -383,14 +312,6 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
     private void processQualifiedCall(PsiMethodCallExpression call) {
       boolean voidContext = ExpressionUtils.isVoidContext(call);
       String name = call.getMethodExpression().getReferenceName();
-      PsiExpression qualifier = call.getMethodExpression().getQualifierExpression();
-      if (qualifier != null && InheritanceUtil.isInheritor(qualifier.getType(), CommonClassNames.JAVA_UTIL_ITERATOR)) {
-        makeQueried();
-        if (!QUERY_ITERATOR_METHODS.test(call)) {
-          makeUpdatedCall(call);
-        }
-        return;
-      }
       boolean queryQualifier = isQueryUpdateMethodName(name, myQueryNames);
       boolean updateQualifier = isQueryUpdateMethodName(name, myUpdateNames);
       if (queryQualifier &&
@@ -398,7 +319,7 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
         makeQueried();
       }
       if (updateQualifier) {
-        makeUpdatedCall(call);
+        makeUpdated();
         if (!voidContext) {
           makeQueried();
         }
@@ -432,15 +353,6 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
           makeUpdated();
         }
         makeQueried();
-      }
-    }
-
-    private void makeUpdatedCall(PsiMethodCallExpression call) {
-      if (NO_UPDATE_FOR_EMPTY.test(call)) {
-        makeUpdatedForNonEmpty();
-      }
-      else {
-        makeUpdated();
       }
     }
 
@@ -506,9 +418,6 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
       if (CollectionUtils.isCollectionClassOrInterface(type)) {
         return false;
       }
-      if (InheritanceUtil.isInheritor(type, CommonClassNames.JAVA_UTIL_ITERATOR)) {
-        return false;
-      }
       if (type instanceof PsiArrayType && !(type instanceof PsiEllipsisType)) {
         return false;
       }
@@ -565,55 +474,51 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
     return immutable && !SideEffectChecker.mayHaveSideEffects(call);
   }
 
-  private record QueryUpdateInfo(boolean queried, boolean updated, boolean updatedForNonEmpty, boolean knownEmpty) {
-    static final QueryUpdateInfo UNKNOWN = new QueryUpdateInfo(true, true, true, false);
+  private static class QueryUpdateInfo {
+    boolean updated;
+    boolean queried;
   }
 
   private class MismatchedCollectionQueryUpdateVisitor extends BaseInspectionVisitor {
-    private void check(@NotNull PsiVariable variable) {
-      QueryUpdateInfo info = myRunner.compute(variable, Set.of());
-      final boolean written = info.updated || updatedViaInitializer(variable);
-      final boolean read = info.queried || queriedViaInitializer(variable);
-      if (!written && info.updatedForNonEmpty && info.knownEmpty) {
-        registerVariableError(variable,
-                              InspectionGadgetsBundle.message("mismatched.update.collection.problem.description.no.effect.updates"));
-        return;
-      }
-      if (read == written) {
-        return;
-      }
-      String message = written ? InspectionGadgetsBundle.message("mismatched.update.collection.problem.description.updated.not.queried") :
-                       info.knownEmpty ? InspectionGadgetsBundle.message(
-                         "mismatched.update.collection.problem.description.queried.empty") :
-                       InspectionGadgetsBundle.message("mismatched.update.collection.problem.description.queried.not.updated");
+    private void register(PsiVariable variable, boolean written) {
       if (written) {
         PsiExpression initializer = variable.getInitializer();
         if (initializer != null) {
           List<PsiExpression> expressions = ExpressionUtils.nonStructuralChildren(initializer).toList();
           if (!ContainerUtil.and(expressions, MismatchedCollectionQueryUpdateInspection::isCollectionInitializer)) {
             expressions.stream().filter(MismatchedCollectionQueryUpdateInspection::isCollectionInitializer)
-              .forEach(emptyCollection -> registerError(emptyCollection, message));
+              .forEach(emptyCollection -> registerError(emptyCollection, Boolean.TRUE));
             return;
           }
         }
       }
-      registerVariableError(variable, message);
+      registerVariableError(variable, written);
     }
 
     @Override
     public void visitField(@NotNull PsiField field) {
       super.visitField(field);
-      if (UnusedSymbolUtil.isImplicitWrite(field) || UnusedSymbolUtil.isImplicitRead(field)) {
+      QueryUpdateInfo info = getCollectionQueryUpdateInfo(field, updateNames, queryNames, ignoredClasses);
+      if (info == null) return;
+      final boolean written = info.updated || updatedViaInitializer(field);
+      final boolean read = info.queried || queriedViaInitializer(field);
+      if (read == written || UnusedSymbolUtil.isImplicitWrite(field) || UnusedSymbolUtil.isImplicitRead(field)) {
         // Even implicit read of the mutable collection field may cause collection change
         return;
       }
-      check(field);
+      register(field, written);
     }
 
     @Override
     public void visitLocalVariable(@NotNull PsiLocalVariable variable) {
       super.visitLocalVariable(variable);
-      check(variable);
+      QueryUpdateInfo info = getCollectionQueryUpdateInfo(variable, updateNames, queryNames, ignoredClasses, Set.of());
+      if (info == null) return;
+      final boolean written = info.updated || updatedViaInitializer(variable);
+      final boolean read = info.queried || queriedViaInitializer(variable);
+      if (read != written) {
+        register(variable, written);
+      }
     }
 
     private boolean updatedViaInitializer(PsiVariable variable) {
@@ -626,7 +531,7 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
       if (initializer instanceof PsiNewExpression newExpression) {
         final PsiAnonymousClass anonymousClass = newExpression.getAnonymousClass();
         if (anonymousClass != null) {
-          if (myRunner.compute(null, anonymousClass, Set.of()).updated) {
+          if (getCollectionQueryUpdateInfo(null, anonymousClass, queryNames, updateNames).updated) {
             return true;
           }
           final ThisPassedAsArgumentVisitor visitor = new ThisPassedAsArgumentVisitor();
@@ -647,6 +552,48 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
     }
   }
 
+  private static boolean checkVariable(PsiVariable variable, PsiElement context, Set<String> ignoredClasses) {
+    if (context == null) {
+      return false;
+    }
+    final PsiType type = variable.getType();
+    if (!CollectionUtils.isCollectionClassOrInterface(type)) {
+      return false;
+    }
+    return !ContainerUtil.exists(ignoredClasses, className -> InheritanceUtil.isInheritor(type, className));
+  }
+
+  private static QueryUpdateInfo getCollectionQueryUpdateInfo(@NotNull PsiField field,
+                                                              Set<String> updateNames,
+                                                              Set<String> queryNames,
+                                                              Set<String> ignoredClasses) {
+    if (!field.hasModifierProperty(PsiModifier.PRIVATE)) {
+      PsiClass aClass = field.getContainingClass();
+      if (aClass == null || !aClass.hasModifierProperty(PsiModifier.PRIVATE) || field.hasModifierProperty(PsiModifier.PUBLIC)) {
+        // Public field within private class can be written/read via reflection even without setAccessible hacks,
+        // so we don't analyze such fields to reduce false-positives
+        return null;
+      }
+    }
+    final PsiClass containingClass = PsiUtil.getTopLevelClass(field);
+    if (!checkVariable(field, containingClass, ignoredClasses)) {
+      return null;
+    }
+    return getCollectionQueryUpdateInfo(field, containingClass, queryNames, updateNames);
+  }
+
+  private static QueryUpdateInfo getCollectionQueryUpdateInfo(@NotNull PsiLocalVariable variable,
+                                                              Set<String> updateNames,
+                                                              Set<String> queryNames,
+                                                              Set<String> ignoredClasses,
+                                                              Set<PsiReferenceExpression> ignored) {
+    final PsiCodeBlock codeBlock = PsiTreeUtil.getParentOfType(variable, PsiCodeBlock.class);
+    if (!checkVariable(variable, codeBlock, ignoredClasses)) {
+      return null;
+    }
+    return getCollectionQueryUpdateInfo(variable, codeBlock, queryNames, updateNames, ignored);
+  }
+
   /**
    * @param collectCall a method call returning a list (e.g. {@code Stream.of(1, 2, 3).collect(Collectors.toList())})
    * @return {@code true} if it's known that the result of {@code collectCall} is never updated;
@@ -655,24 +602,24 @@ public final class MismatchedCollectionQueryUpdateInspection extends BaseInspect
   @Contract("null -> false")
   public static boolean isUnmodified(@Nullable PsiMethodCallExpression collectCall) {
     if (collectCall == null) return false;
-    final PsiExpression effectiveReference = findEffectiveReference(collectCall);
-    MismatchedQueryUpdateRunner runner = new MismatchedQueryUpdateRunner(defaultQueryNames, defaultUpdateNames, Set.of());
-    QueryUpdateInfo info = runner.processSingleRef(collectCall);
-    if (!info.updated && !info.updatedForNonEmpty) return true;
+    final PsiExpression effectiveReference =  findEffectiveReference(collectCall);
+    QueryUpdateInfo info = new QueryUpdateInfo();
+    new Visitor(null, defaultQueryNames, defaultUpdateNames, info).process(effectiveReference);
+    if (!info.updated) return true;
     PsiElement parent = effectiveReference.getParent();
     Set<PsiReferenceExpression> ignored = new HashSet<>();
     if (parent instanceof PsiAssignmentExpression assignmentExpression) {
-      // Do not process when the result of assignment is used: rare case
-      if (!ExpressionUtils.isVoidContext(assignmentExpression)) return false;
       if(assignmentExpression.getLExpression() instanceof PsiReferenceExpression referenceExpression){
         ignored.add(referenceExpression);
         parent = referenceExpression.resolve();
       }
     }
-    if (parent instanceof PsiVariable variable) {
-      info = runner.compute(variable, variable instanceof PsiField ? Set.of() : ignored);
-      return !info.updated && !info.updatedForNonEmpty;
+    if (!(parent instanceof PsiLocalVariable || parent instanceof PsiField)) return false;
+    if (parent instanceof PsiField) {
+      info = getCollectionQueryUpdateInfo((PsiField)parent, defaultUpdateNames, defaultQueryNames, Collections.emptySet());
+    } else {
+      info = getCollectionQueryUpdateInfo((PsiLocalVariable)parent, defaultUpdateNames, defaultQueryNames, Collections.emptySet(), ignored);
     }
-    return false;
+    return info != null && !info.updated;
   }
 }
