@@ -1,9 +1,9 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.builders.impl;
 
-import org.jetbrains.annotations.ApiStatus;
+import com.intellij.util.SmartList;
+import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Unmodifiable;
 import org.jetbrains.jps.builders.BuildTarget;
 import org.jetbrains.jps.builders.BuildTargetRegistry;
 import org.jetbrains.jps.builders.BuildTargetType;
@@ -14,47 +14,43 @@ import org.jetbrains.jps.model.module.JpsModule;
 
 import java.util.*;
 
-@ApiStatus.Internal
 public final class BuildTargetRegistryImpl implements BuildTargetRegistry {
-  private final @Unmodifiable List<BuildTarget<?>> allTargets;
-  private final @Unmodifiable Map<BuildTargetType<?>, List<? extends BuildTarget<?>>> targets;
-  private final @Unmodifiable Map<JpsModule, List<ModuleBasedTarget<?>>> moduleBasedTargets;
+  private final List<BuildTarget<?>> myAllTargets;
+  private final Map<BuildTargetType<?>, List<? extends BuildTarget<?>>> myTargets;
+  private final Map<JpsModule, List<ModuleBasedTarget>> myModuleBasedTargets;
 
   public BuildTargetRegistryImpl(JpsModel model) {
-    Map<BuildTargetType<?>, List<? extends BuildTarget<?>>> targets = new HashMap<>();
-    Map<JpsModule, List<ModuleBasedTarget<?>>> moduleBasedTargets = new HashMap<>();
-    List<BuildTarget<?>> allTargets = new ArrayList<>();
+    myTargets = new HashMap<>();
+    myModuleBasedTargets = new HashMap<>();
+    List<List<? extends BuildTarget<?>>> targetsByType = new ArrayList<>();
     for (BuildTargetType<?> type : TargetTypeRegistry.getInstance().getTargetTypes()) {
-      List<? extends BuildTarget<?>> targetsPerType = type.computeAllTargets(model);
-      targets.put(type, targetsPerType);
-      allTargets.addAll(targetsPerType);
-      for (BuildTarget<?> target : targetsPerType) {
+      List<? extends BuildTarget<?>> targets = type.computeAllTargets(model);
+      myTargets.put(type, targets);
+      targetsByType.add(targets);
+      for (BuildTarget<?> target : targets) {
         if (target instanceof ModuleBasedTarget) {
-          ModuleBasedTarget<?> t = (ModuleBasedTarget<?>)target;
-          JpsModule module = t.getModule();
-          List<ModuleBasedTarget<?>> list = moduleBasedTargets.get(module);
+          final ModuleBasedTarget t = (ModuleBasedTarget)target;
+          final JpsModule module = t.getModule();
+          List<ModuleBasedTarget> list = myModuleBasedTargets.get(module);
           if (list == null) {
             list = new ArrayList<>();
-            moduleBasedTargets.put(module, list);
+            myModuleBasedTargets.put(module, list);
           }
           list.add(t);
         }
       }
     }
-    this.targets = Map.copyOf(targets);
-    this.moduleBasedTargets = Map.copyOf(moduleBasedTargets);
-    this.allTargets = List.copyOf(allTargets);
+    myAllTargets = ContainerUtil.concat(targetsByType);
   }
 
   @Override
   public @NotNull Collection<ModuleBasedTarget<?>> getModuleBasedTargets(@NotNull JpsModule module, @NotNull BuildTargetRegistry.ModuleTargetSelector selector) {
-    final List<ModuleBasedTarget<?>> targets = moduleBasedTargets.get(module);
+    final List<ModuleBasedTarget> targets = myModuleBasedTargets.get(module);
     if (targets == null || targets.isEmpty()) {
-      return List.of();
+      return Collections.emptyList();
     }
-
-    List<ModuleBasedTarget<?>> result = new ArrayList<>();
-    for (ModuleBasedTarget<?> target : targets) {
+    final List<ModuleBasedTarget<?>> result = new SmartList<>();
+    for (ModuleBasedTarget target : targets) {
       switch (selector) {
         case ALL:
           result.add(target);
@@ -76,11 +72,11 @@ public final class BuildTargetRegistryImpl implements BuildTargetRegistry {
   @Override
   public @NotNull <T extends BuildTarget<?>> List<T> getAllTargets(@NotNull BuildTargetType<T> type) {
     //noinspection unchecked
-    return (List<T>)targets.getOrDefault(type, List.of());
+    return (List<T>)myTargets.get(type);
   }
 
   @Override
   public @NotNull List<BuildTarget<?>> getAllTargets() {
-    return allTargets;
+    return myAllTargets;
   }
 }
