@@ -1,8 +1,9 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.cmdline;
 
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.io.FileUtilRt;
+import com.intellij.openapi.util.io.NioFiles;
+import com.intellij.util.SystemProperties;
 import com.intellij.util.containers.FileCollectionFactory;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
@@ -23,7 +24,10 @@ import org.jetbrains.jps.incremental.fs.BuildFSState;
 import org.jetbrains.jps.incremental.messages.BuildMessage;
 import org.jetbrains.jps.incremental.messages.CompilerMessage;
 import org.jetbrains.jps.incremental.relativizer.PathRelativizerService;
-import org.jetbrains.jps.incremental.storage.*;
+import org.jetbrains.jps.incremental.storage.BuildDataManager;
+import org.jetbrains.jps.incremental.storage.BuildTargetsState;
+import org.jetbrains.jps.incremental.storage.ProjectStamps;
+import org.jetbrains.jps.incremental.storage.StampsStorage;
 import org.jetbrains.jps.indices.ModuleExcludeIndex;
 import org.jetbrains.jps.indices.impl.IgnoredFileIndexImpl;
 import org.jetbrains.jps.indices.impl.ModuleExcludeIndexImpl;
@@ -32,15 +36,12 @@ import org.jetbrains.jps.model.JpsProject;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Path;
 import java.util.*;
 
 import static org.jetbrains.jps.api.CmdlineRemoteProto.Message.ControllerMessage.ParametersMessage.TargetTypeBuildScope;
 import static org.jetbrains.jps.backwardRefs.JavaBackwardReferenceIndexWriter.isCompilerReferenceFSCaseSensitive;
 
 public final class BuildRunner {
-  private static final boolean USE_EXPERIMENTAL_STORAGE = Boolean.getBoolean("jps.use.experimental.storage");
-
   private static final Logger LOG = Logger.getInstance(BuildRunner.class);
   private final JpsModelLoader myModelLoader;
   private List<String> myFilePaths = Collections.emptyList();
@@ -52,26 +53,18 @@ public final class BuildRunner {
   }
 
   public void setFilePaths(@Nullable List<String> filePaths) {
-    myFilePaths = filePaths == null ? Collections.emptyList() : filePaths;
+    myFilePaths = filePaths != null? filePaths : Collections.emptyList();
   }
 
   public void setBuilderParams(@Nullable Map<String, String> builderParams) {
-    myBuilderParams = builderParams == null ? Collections.emptyMap() : builderParams;
+    myBuilderParams = builderParams != null? builderParams : Collections.emptyMap();
   }
 
   public @NotNull JpsProject loadModelAndGetJpsProject() throws IOException {
     return myModelLoader.loadModel().getProject();
   }
 
-  /**
-   * @deprecated please use {@link #load(MessageHandler, Path, BuildFSState)}
-   */
-  @Deprecated(forRemoval = true)
   public ProjectDescriptor load(@NotNull MessageHandler msgHandler, @NotNull File dataStorageRoot, @NotNull BuildFSState fsState) throws IOException {
-    return load(msgHandler, dataStorageRoot.toPath(), fsState);
-  }
-
-  public ProjectDescriptor load(@NotNull MessageHandler msgHandler, @NotNull Path dataStorageRoot, @NotNull BuildFSState fsState) throws IOException {
     final JpsModel jpsModel = myModelLoader.loadModel();
     BuildDataPaths dataPaths = new BuildDataPathsImpl(dataStorageRoot);
     BuildTargetRegistryImpl targetRegistry = new BuildTargetRegistryImpl(jpsModel);
@@ -79,56 +72,43 @@ public final class BuildRunner {
     IgnoredFileIndexImpl ignoredFileIndex = new IgnoredFileIndexImpl(jpsModel);
     BuildRootIndexImpl buildRootIndex = new BuildRootIndexImpl(targetRegistry, jpsModel, index, dataPaths, ignoredFileIndex);
     BuildTargetIndexImpl targetIndex = new BuildTargetIndexImpl(targetRegistry, buildRootIndex);
+    BuildTargetsState targetsState = new BuildTargetsState(dataPaths, jpsModel, buildRootIndex);
 
     PathRelativizerService relativizer = new PathRelativizerService(jpsModel.getProject(), isCompilerReferenceFSCaseSensitive());
 
+    ProjectStamps projectStamps = null;
     BuildDataManager dataManager = null;
-    StorageManager storageManager = null;
     try {
-      storageManager = createStorageManager(dataStorageRoot);
-      dataManager = new BuildDataManager(dataPaths, new BuildTargetsState(new BuildTargetStateManagerImpl(dataPaths, jpsModel)), relativizer, storageManager);
+      projectStamps = new ProjectStamps(dataStorageRoot, targetsState, relativizer);
+      dataManager = new BuildDataManager(dataPaths, targetsState, relativizer);
       if (dataManager.versionDiffers()) {
         myForceCleanCaches = true;
-        msgHandler.processMessage(new CompilerMessage(
-          getRootCompilerName(), BuildMessage.Kind.INFO, JpsBuildBundle.message("build.message.dependency.data.format.has.changed.project.rebuild.required")
-        ));
+        msgHandler.processMessage(new CompilerMessage(getRootCompilerName(), BuildMessage.Kind.INFO,
+                                                      JpsBuildBundle.message("build.message.dependency.data.format.has.changed.project.rebuild.required")));
       }
     }
     catch (Exception e) {
       // second try
       LOG.info(e);
-
-      if (storageManager != null) {
-        storageManager.forceClose();
+      if (projectStamps != null) {
+        projectStamps.close();
       }
       if (dataManager != null) {
         dataManager.close();
       }
-
       myForceCleanCaches = true;
-      FileUtilRt.deleteRecursively(dataStorageRoot);
-
-      dataManager = new BuildDataManager(dataPaths, new BuildTargetsState(new BuildTargetStateManagerImpl(dataPaths, jpsModel)), relativizer, createStorageManager(dataStorageRoot));
-      // the second attempt succeeded
-      msgHandler.processMessage(new CompilerMessage(
-        getRootCompilerName(), BuildMessage.Kind.INFO, JpsBuildBundle.message("build.message.project.rebuild.forced.0", e.getMessage()))
-      );
+      NioFiles.deleteRecursively(dataStorageRoot.toPath());
+      targetsState = new BuildTargetsState(dataPaths, jpsModel, buildRootIndex);
+      projectStamps = new ProjectStamps(dataStorageRoot, targetsState, relativizer);
+      dataManager = new BuildDataManager(dataPaths, targetsState, relativizer);
+      // second attempt succeeded
+      msgHandler.processMessage(new CompilerMessage(getRootCompilerName(), BuildMessage.Kind.INFO,
+                                                    JpsBuildBundle.message("build.message.project.rebuild.forced.0", e.getMessage())));
     }
 
     return new ProjectDescriptor(
-      jpsModel, fsState, dataManager, BuildLoggingManager.DEFAULT, index, targetIndex, buildRootIndex, ignoredFileIndex
+      jpsModel, fsState, projectStamps, dataManager, BuildLoggingManager.DEFAULT, index, targetIndex, buildRootIndex, ignoredFileIndex
     );
-  }
-
-  private static @Nullable StorageManager createStorageManager(@NotNull Path dataStorageRoot) {
-    if (USE_EXPERIMENTAL_STORAGE || ProjectStamps.PORTABLE_CACHES) {
-      StorageManager manager = new StorageManager(dataStorageRoot.resolve("jps-portable-cache.db"));
-      manager.open();
-      return manager;
-    }
-    else {
-      return null;
-    }
   }
 
   public static @NotNull @Nls String getRootCompilerName() {
@@ -143,8 +123,7 @@ public final class BuildRunner {
                        @NotNull CanceledStatus cs,
                        @NotNull MessageHandler msgHandler,
                        @NotNull BuildType buildType,
-                       @NotNull List<TargetTypeBuildScope> scopes,
-                       boolean includeDependenciesToScope) throws Exception {
+                       @NotNull List<TargetTypeBuildScope> scopes, final boolean includeDependenciesToScope) throws Exception {
     for (int attempt = 0; attempt < 2 && !cs.isCanceled(); attempt++) {
       final boolean forceClean = myForceCleanCaches && myFilePaths.isEmpty();
       final CompileScope compileScope = createCompilationScope(pd, scopes, myFilePaths, forceClean, includeDependenciesToScope);
@@ -183,11 +162,8 @@ public final class BuildRunner {
     return createCompilationScope(pd, scopes, myFilePaths, forceClean, false);
   }
 
-  private static CompileScope createCompilationScope(@NotNull ProjectDescriptor projectDescriptor,
-                                                     @NotNull List<TargetTypeBuildScope> scopes,
-                                                     @NotNull Collection<String> paths,
-                                                     boolean forceClean,
-                                                     boolean includeDependenciesToScope) throws Exception {
+  private static CompileScope createCompilationScope(ProjectDescriptor pd, List<TargetTypeBuildScope> scopes, Collection<String> paths,
+                                                     final boolean forceClean, final boolean includeDependenciesToScope) throws Exception {
     Set<BuildTargetType<?>> targetTypes = new HashSet<>();
     Set<BuildTargetType<?>> targetTypesToForceBuild = new HashSet<>();
     Set<BuildTarget<?>> targets = new HashSet<>();
@@ -207,7 +183,7 @@ public final class BuildRunner {
         targetTypes.add(targetType);
       }
       else {
-        BuildTargetLoader<?> loader = targetType.createLoader(projectDescriptor.getModel());
+        BuildTargetLoader<?> loader = targetType.createLoader(pd.getModel());
         for (String targetId : scope.getTargetIdList()) {
           BuildTarget<?> target = loader.createTarget(targetId);
           if (target != null) {
@@ -220,13 +196,11 @@ public final class BuildRunner {
       }
     }
     if (includeDependenciesToScope) {
-      includeDependenciesToScope(targetTypes, targets, targetTypesToForceBuild, projectDescriptor);
+      includeDependenciesToScope(targetTypes, targets, targetTypesToForceBuild, pd);
     }
 
-    if (paths.isEmpty()) {
-      files = Collections.emptyMap();
-    }
-    else {
+    final StampsStorage<? extends StampsStorage.Stamp> stampsStorage = pd.getProjectStamps().getStampStorage();
+    if (!paths.isEmpty()) {
       boolean forceBuildAllModuleBasedTargets = false;
       for (BuildTargetType<?> type : targetTypesToForceBuild) {
         if (type instanceof JavaModuleBuildTargetType) {
@@ -237,7 +211,7 @@ public final class BuildRunner {
       files = new HashMap<>();
       for (String path : paths) {
         final File file = new File(path);
-        final Collection<BuildRootDescriptor> descriptors = projectDescriptor.getBuildRootIndex().findAllParentDescriptors(file, null);
+        final Collection<BuildRootDescriptor> descriptors = pd.getBuildRootIndex().findAllParentDescriptors(file, null);
         for (BuildRootDescriptor descriptor : descriptors) {
           Set<File> fileSet = files.get(descriptor.getTarget());
           if (fileSet == null) {
@@ -248,25 +222,26 @@ public final class BuildRunner {
           if (added) {
             final BuildTargetType<?> targetType = descriptor.getTarget().getTargetType();
             if (targetTypesToForceBuild.contains(targetType) || (forceBuildAllModuleBasedTargets && targetType instanceof ModuleBasedBuildTargetType)) {
-              StampsStorage<?> stampStorage = projectDescriptor.dataManager.getFileStampStorage(descriptor.getTarget());
-              projectDescriptor.fsState.markDirty(null, file, descriptor, stampStorage, false);
+              pd.fsState.markDirty(null, file, descriptor, stampsStorage, false);
             }
           }
         }
       }
     }
+    else {
+      files = Collections.emptyMap();
+    }
+
     return new CompileScopeImpl(targetTypes, targetTypesToForceBuild, targets, files);
   }
 
-  private static void includeDependenciesToScope(Set<? extends BuildTargetType<?>> targetTypes,
-                                                 Set<BuildTarget<?>> targets,
-                                                 Set<? super BuildTargetType<?>> targetTypesToForceBuild,
-                                                 ProjectDescriptor descriptor) {
+  private static void includeDependenciesToScope(Set<? extends BuildTargetType<?>> targetTypes, Set<BuildTarget<?>> targets,
+                                                 Set<? super BuildTargetType<?>> targetTypesToForceBuild, ProjectDescriptor descriptor) {
     //todo get rid of CompileContext parameter for BuildTargetIndex.getDependencies() and use it here
     TargetOutputIndex dummyIndex = new TargetOutputIndex() {
       @Override
       public Collection<BuildTarget<?>> getTargetsByOutputFile(@NotNull File file) {
-        return List.of();
+        return Collections.emptyList();
       }
     };
 
@@ -289,15 +264,10 @@ public final class BuildRunner {
   }
 
   public static boolean isParallelBuildEnabled() {
-    return Boolean.parseBoolean(System.getProperty(GlobalOptions.COMPILE_PARALLEL_OPTION));
+    return SystemProperties.getBooleanProperty(GlobalOptions.COMPILE_PARALLEL_OPTION, false);
   }
 
   public static boolean isParallelBuildAutomakeEnabled() {
-    if (!isParallelBuildEnabled()) {
-      return false;
-    }
-
-    String value = System.getProperty(GlobalOptions.ALLOW_PARALLEL_AUTOMAKE_OPTION);
-    return value == null || Boolean.parseBoolean(value);
+    return isParallelBuildEnabled() && SystemProperties.getBooleanProperty(GlobalOptions.ALLOW_PARALLEL_AUTOMAKE_OPTION, true);
   }
 }
