@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.jps.incremental;
 
 import com.intellij.openapi.diagnostic.Logger;
@@ -7,9 +7,7 @@ import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.util.containers.CollectionFactory;
 import it.unimi.dsi.fastutil.objects.Object2LongMap;
 import it.unimi.dsi.fastutil.objects.Object2LongOpenHashMap;
-import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Unmodifiable;
 import org.jetbrains.jps.builders.BuildTargetType;
 import org.jetbrains.jps.builders.java.JavaModuleBuildTargetType;
 import org.jetbrains.jps.service.JpsServiceManager;
@@ -25,11 +23,10 @@ public final class BuilderRegistry {
   private static final class Holder {
     static final BuilderRegistry ourInstance = new BuilderRegistry();
   }
-  private final Map<BuilderCategory, List<ModuleLevelBuilder>> moduleLevelBuilders = new HashMap<>();
-  private final List<JvmClassFileInstrumenter> myClassFileInstrumenters = new ArrayList<>();
-  private final Object2LongMap<BuildTargetType<?>> expectedBuildTime = new Object2LongOpenHashMap<>();
-  private final List<TargetBuilder<?,?>> targetBuilders = new ArrayList<>();
-  private final FileFilter moduleBuilderFileFilter;
+  private final Map<BuilderCategory, List<ModuleLevelBuilder>> myModuleLevelBuilders = new HashMap<>();
+  private final Object2LongMap<BuildTargetType<?>> myExpectedBuildTime = new Object2LongOpenHashMap<>();
+  private final List<TargetBuilder<?,?>> myTargetBuilders = new ArrayList<>();
+  private final FileFilter myModuleBuilderFileFilter;
 
   public static @NotNull BuilderRegistry getInstance() {
     return Holder.ourInstance;
@@ -37,13 +34,14 @@ public final class BuilderRegistry {
 
   private BuilderRegistry() {
     for (BuilderCategory category : BuilderCategory.values()) {
-      moduleLevelBuilders.put(category, new ArrayList<>());
+      myModuleLevelBuilders.put(category, new ArrayList<>());
     }
 
     Set<String> compilableFileExtensions = CollectionFactory.createFilePathSet();
     for (BuilderService service : JpsServiceManager.getInstance().getExtensions(BuilderService.class)) {
-      targetBuilders.addAll(service.createBuilders());
-      for (ModuleLevelBuilder builder : service.createModuleLevelBuilders()) {
+      myTargetBuilders.addAll(service.createBuilders());
+      final List<? extends ModuleLevelBuilder> moduleLevelBuilders = service.createModuleLevelBuilders();
+      for (ModuleLevelBuilder builder : moduleLevelBuilders) {
         try {
           List<String> extensions = builder.getCompilableFileExtensions();
           if (compilableFileExtensions != null) {
@@ -54,40 +52,35 @@ public final class BuilderRegistry {
           LOG.info(builder.getClass().getName() + " builder doesn't implement 'getCompilableFileExtensions' method so ModuleBuildTarget will process all files under source roots.");
           compilableFileExtensions = null;
         }
-        moduleLevelBuilders.get(builder.getCategory()).add(builder);
-        if (builder instanceof JvmClassFileInstrumenter) {
-          myClassFileInstrumenters.add((JvmClassFileInstrumenter)builder);
-        }
+        myModuleLevelBuilders.get(builder.getCategory()).add(builder);
       }
     }
-    Collections.sort(myClassFileInstrumenters, Comparator.comparing(JvmClassFileInstrumenter::getId));
-    
     if (compilableFileExtensions == null) {
-      moduleBuilderFileFilter = FileFilters.EVERYTHING;
+      myModuleBuilderFileFilter = FileFilters.EVERYTHING;
     }
     else {
-      Set<String> finalCompilableFileExtensions = compilableFileExtensions;
-      moduleBuilderFileFilter = file -> finalCompilableFileExtensions.contains(FileUtilRt.getExtension(file.getName()));
+      final Set<String> finalCompilableFileExtensions = compilableFileExtensions;
+      myModuleBuilderFileFilter = file -> finalCompilableFileExtensions.contains(FileUtilRt.getExtension(file.getName()));
     }
 
     long moduleTargetBuildTime = 0;
     for (ModuleLevelBuilder builder : getModuleLevelBuilders()) {
       moduleTargetBuildTime += builder.getExpectedBuildTime();
     }
-    expectedBuildTime.put(JavaModuleBuildTargetType.PRODUCTION, moduleTargetBuildTime);
-    expectedBuildTime.put(JavaModuleBuildTargetType.TEST, moduleTargetBuildTime);
+    myExpectedBuildTime.put(JavaModuleBuildTargetType.PRODUCTION, moduleTargetBuildTime);
+    myExpectedBuildTime.put(JavaModuleBuildTargetType.TEST, moduleTargetBuildTime);
 
-    for (TargetBuilder<?, ?> targetBuilder : targetBuilders) {
+    for (TargetBuilder<?, ?> targetBuilder : myTargetBuilders) {
       long buildTime = targetBuilder.getExpectedBuildTime();
       for (BuildTargetType<?> type : targetBuilder.getTargetTypes()) {
-        long total = expectedBuildTime.getLong(type);
-        expectedBuildTime.put(type, total + buildTime);
+        long total = myExpectedBuildTime.getLong(type);
+        myExpectedBuildTime.put(type, total + buildTime);
       }
     }
   }
 
   public @NotNull FileFilter getModuleBuilderFileFilter() {
-    return moduleBuilderFileFilter;
+    return myModuleBuilderFileFilter;
   }
 
   public int getModuleLevelBuilderCount() {
@@ -98,27 +91,19 @@ public final class BuilderRegistry {
     return count;
   }
 
-  /**
-   * Returns the list of all available class-file instrumenters in the sorted order. 
-   */
-  @ApiStatus.Internal
-  public @NotNull List<JvmClassFileInstrumenter> getClassFileInstrumenters() {
-    return myClassFileInstrumenters;
+  public List<BuildTask> getBeforeTasks(){
+    return Collections.emptyList(); // todo
   }
 
-  public @NotNull @Unmodifiable List<BuildTask> getBeforeTasks(){
-    return List.of(); // todo
+  public List<BuildTask> getAfterTasks(){
+    return Collections.emptyList(); // todo
   }
 
-  public @NotNull @Unmodifiable List<BuildTask> getAfterTasks(){
-    return List.of(); // todo
+  public List<ModuleLevelBuilder> getBuilders(BuilderCategory category){
+    return Collections.unmodifiableList(myModuleLevelBuilders.get(category));
   }
 
-  public @NotNull @Unmodifiable List<ModuleLevelBuilder> getBuilders(BuilderCategory category){
-    return Collections.unmodifiableList(moduleLevelBuilders.get(category));
-  }
-
-  public @NotNull @Unmodifiable List<ModuleLevelBuilder> getModuleLevelBuilders() {
+  public List<ModuleLevelBuilder> getModuleLevelBuilders() {
     List<ModuleLevelBuilder> result = new ArrayList<>();
     for (BuilderCategory category : BuilderCategory.values()) {
       result.addAll(getBuilders(category));
@@ -126,8 +111,8 @@ public final class BuilderRegistry {
     return result;
   }
 
-  public @NotNull @Unmodifiable List<TargetBuilder<?,?>> getTargetBuilders() {
-    return targetBuilders;
+  public List<TargetBuilder<?,?>> getTargetBuilders() {
+    return myTargetBuilders;
   }
 
   /**
@@ -135,7 +120,7 @@ public final class BuilderRegistry {
    * @see Builder#getExpectedBuildTime()
    */
   public long getExpectedBuildTimeForTarget(BuildTargetType<?> targetType) {
-    // it may happen that there are no builders registered for a given type, so it won't be built at all
-    return expectedBuildTime.getLong(targetType);
+    //it may happen that there is no builders registered for a given type, so it won't be built at all.
+    return myExpectedBuildTime.getLong(targetType);
   }
 }
