@@ -1,12 +1,13 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental;
 
-import com.dynatrace.hash4j.hashing.HashSink;
-import org.jetbrains.annotations.ApiStatus;
+import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.jps.builders.BuildRootIndex;
 import org.jetbrains.jps.builders.BuildTarget;
-import org.jetbrains.jps.builders.BuildTargetHashSupplier;
 import org.jetbrains.jps.builders.BuildTargetRegistry;
 import org.jetbrains.jps.builders.TargetOutputIndex;
 import org.jetbrains.jps.builders.java.ExcludedJavaSourceRootProvider;
@@ -16,6 +17,7 @@ import org.jetbrains.jps.builders.java.ResourcesTargetType;
 import org.jetbrains.jps.builders.storage.BuildDataPaths;
 import org.jetbrains.jps.cmdline.ProjectDescriptor;
 import org.jetbrains.jps.incremental.relativizer.PathRelativizerService;
+import org.jetbrains.jps.incremental.storage.ProjectStamps;
 import org.jetbrains.jps.indices.IgnoredFileIndex;
 import org.jetbrains.jps.indices.ModuleExcludeIndex;
 import org.jetbrains.jps.model.JpsModel;
@@ -27,35 +29,35 @@ import org.jetbrains.jps.service.JpsServiceManager;
 
 import java.io.File;
 import java.io.FileFilter;
-import java.nio.file.Path;
+import java.io.PrintWriter;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 /**
- * Describes a step of compilation process which copies resource's files from source and resource roots of a Java module.
+ * Describes step of compilation process which copies resources files from source and resource roots of a Java module.
  */
-public final class ResourcesTarget extends JVMModuleBuildTarget<ResourceRootDescriptor> implements BuildTargetHashSupplier {
-  private final @NotNull ResourcesTargetType targetType;
+public final class ResourcesTarget extends JVMModuleBuildTarget<ResourceRootDescriptor> {
+  private final @NotNull ResourcesTargetType myTargetType;
 
   public ResourcesTarget(@NotNull JpsModule module, @NotNull ResourcesTargetType targetType) {
     super(targetType, module);
-    this.targetType = targetType;
+    myTargetType = targetType;
   }
 
   public @Nullable File getOutputDir() {
-    return JpsJavaExtensionService.getInstance().getOutputDirectory(myModule, targetType.isTests());
+    return JpsJavaExtensionService.getInstance().getOutputDirectory(myModule, myTargetType.isTests());
   }
 
   @Override
   public @NotNull Collection<File> getOutputRoots(@NotNull CompileContext context) {
-    File element = getOutputDir();
-    return element == null ? List.of() : List.of(element);
+    return ContainerUtil.createMaybeSingletonList(getOutputDir());
   }
 
   @Override
   public boolean isTests() {
-    return targetType.isTests();
+    return myTargetType.isTests();
   }
 
   @Override
@@ -65,23 +67,20 @@ public final class ResourcesTarget extends JVMModuleBuildTarget<ResourceRootDesc
 
   @Override
   public @NotNull Collection<BuildTarget<?>> computeDependencies(@NotNull BuildTargetRegistry targetRegistry, @NotNull TargetOutputIndex outputIndex) {
-    return List.of();
+    return Collections.emptyList();
   }
 
   @Override
-  public @NotNull List<ResourceRootDescriptor> computeRootDescriptors(@NotNull JpsModel model,
-                                                                      @NotNull ModuleExcludeIndex index,
-                                                                      @NotNull IgnoredFileIndex ignoredFileIndex,
-                                                                      @NotNull BuildDataPaths dataPaths) {
+  public @NotNull List<ResourceRootDescriptor> computeRootDescriptors(@NotNull JpsModel model, @NotNull ModuleExcludeIndex index, @NotNull IgnoredFileIndex ignoredFileIndex, @NotNull BuildDataPaths dataPaths) {
     List<ResourceRootDescriptor> roots = new ArrayList<>();
     JavaSourceRootType type = isTests() ? JavaSourceRootType.TEST_SOURCE : JavaSourceRootType.SOURCE;
     Iterable<ExcludedJavaSourceRootProvider> excludedRootProviders = JpsServiceManager.getInstance().getExtensions(ExcludedJavaSourceRootProvider.class);
     FileFilter filterForExcludedPatterns = index.getModuleFileFilterHonorExclusionPatterns(myModule);
     for (JpsTypedModuleSourceRoot<JavaSourceRootProperties> sourceRoot : myModule.getSourceRoots(type)) {
       if (!isExcludedFromCompilation(excludedRootProviders, sourceRoot)) {
-        String packagePrefix = sourceRoot.getProperties().getPackagePrefix();
-        Path rootFile = sourceRoot.getPath();
-        roots.add(new FilteredResourceRootDescriptor(rootFile.toFile(), this, packagePrefix, computeRootExcludes(rootFile, index),
+        final String packagePrefix = sourceRoot.getProperties().getPackagePrefix();
+        final File rootFile = sourceRoot.getFile();
+        roots.add(new FilteredResourceRootDescriptor(rootFile, this, packagePrefix, computeRootExcludes(rootFile, index),
                                                      filterForExcludedPatterns));
       }
     }
@@ -89,9 +88,9 @@ public final class ResourcesTarget extends JVMModuleBuildTarget<ResourceRootDesc
     JavaResourceRootType resourceType = isTests() ? JavaResourceRootType.TEST_RESOURCE : JavaResourceRootType.RESOURCE;
     for (JpsTypedModuleSourceRoot<JavaResourceRootProperties> root : myModule.getSourceRoots(resourceType)) {
       if (!isExcludedFromCompilation(excludedRootProviders, root)) {
-        Path rootFile = root.getPath();
+        File rootFile = root.getFile();
         String relativeOutputPath = root.getProperties().getRelativeOutputPath();
-        roots.add(new ResourceRootDescriptor(rootFile.toFile(), this, relativeOutputPath.replace('/', '.'), computeRootExcludes(rootFile, index), filterForExcludedPatterns));
+        roots.add(new ResourceRootDescriptor(rootFile, this, relativeOutputPath.replace('/', '.'), computeRootExcludes(rootFile, index), filterForExcludedPatterns));
       }
     }
     
@@ -109,20 +108,28 @@ public final class ResourcesTarget extends JVMModuleBuildTarget<ResourceRootDesc
 
   @Override
   public @NotNull String getPresentableName() {
-    return "Resources for '" + getModule().getName() + "' " + (targetType.isTests() ? "tests" : "production");
+    return "Resources for '" + getModule().getName() + "' " + (myTargetType.isTests() ? "tests" : "production");
   }
 
   @Override
-  @ApiStatus.Internal
-  public void computeConfigurationDigest(@NotNull ProjectDescriptor projectDescriptor, @NotNull HashSink hash) {
-    PathRelativizerService relativizer = projectDescriptor.dataManager.getRelativizer();
-
-    List<ResourceRootDescriptor> roots = projectDescriptor.getBuildRootIndex().getTargetRoots(this, null);
+  public void writeConfiguration(@NotNull ProjectDescriptor pd, @NotNull PrintWriter out) {
+    int fingerprint = 0;
+    final BuildRootIndex rootIndex = pd.getBuildRootIndex();
+    final PathRelativizerService relativizer = pd.dataManager.getRelativizer();
+    final List<ResourceRootDescriptor> roots = rootIndex.getTargetRoots(this, null);
     for (ResourceRootDescriptor root : roots) {
-      String path = relativizer.toRelative(root.rootFile.toString());
-      FileHashUtil.computePathHashCode(path, hash);
-      hash.putString(root.getPackagePrefix());
+      String path = relativizer.toRelative(root.getRootFile().getAbsolutePath());
+      fingerprint += pathHashCode(path);
+      fingerprint += root.getPackagePrefix().hashCode();
     }
-    hash.putInt(roots.size());
+    out.write(Integer.toHexString(fingerprint));
+  }
+
+  private static int pathHashCode(@Nullable String path) {
+    // On case insensitive OS hash calculated from path converted to lower case
+    if (ProjectStamps.PORTABLE_CACHES) {
+      return StringUtil.isEmpty(path) ? 0 : FileUtil.toCanonicalPath(path).hashCode();
+    }
+    return FileUtil.pathHashCode(path);
   }
 }
