@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.artifacts;
 
 import org.jetbrains.annotations.NotNull;
@@ -6,16 +6,17 @@ import org.jetbrains.jps.builders.BuildTargetType;
 import org.jetbrains.jps.incremental.BuilderService;
 import org.jetbrains.jps.incremental.TargetBuilder;
 
+import java.util.Collections;
 import java.util.List;
 
 public final class ArtifactBuilderService extends BuilderService {
   @Override
   public @NotNull List<? extends BuildTargetType<?>> getTargetTypes() {
-    return List.of(ArtifactBuildTargetType.INSTANCE);
+    return Collections.singletonList(ArtifactBuildTargetType.INSTANCE);
   }
 
   @Override
-  public @NotNull List<? extends TargetBuilder<?, ?>> createBuilders() {
-    return List.of(new IncArtifactBuilder());
+  public @NotNull List<? extends TargetBuilder<?,?>> createBuilders() {
+    return Collections.singletonList(new IncArtifactBuilder());
   }
 }
