@@ -1,4 +1,4 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.dependencies;
 
 import org.jetbrains.annotations.NotNull;
@@ -13,6 +13,7 @@ import org.jetbrains.jps.indices.IgnoredFileIndex;
 import org.jetbrains.jps.indices.ModuleExcludeIndex;
 import org.jetbrains.jps.model.JpsModel;
 
+import java.io.File;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -37,7 +38,8 @@ public final class ProjectDependenciesResolver extends TargetBuilder<BuildRootDe
                     @NotNull CompileContext context) {
     context.processMessage(new ProgressMessage(JpsBuildBundle.message("progress.message.resolving.repository.libraries.in.the.project")));
     try {
-      DependencyResolvingBuilder.resolveAllMissingDependenciesInProject(context, BuildTargetChunk.forSingleTarget(target));
+      DependencyResolvingBuilder.resolveMissingDependencies(context, context.getProjectDescriptor().getProject().getModules(),
+                                                            BuildTargetChunk.forSingleTarget(target));
     }
     catch (Exception e) {
       DependencyResolvingBuilder.reportError(context, "project", e);
@@ -81,6 +83,11 @@ public final class ProjectDependenciesResolver extends TargetBuilder<BuildRootDe
     public @NotNull String getPresentableName() {
       return "Project Dependencies Resolving";
     }
+
+    @Override
+    public @NotNull Collection<File> getOutputRoots(@NotNull CompileContext context) {
+      return Collections.emptyList();
+    }
   }
 
   public static final class ProjectDependenciesResolvingTargetType extends BuildTargetType<ProjectDependenciesResolvingTarget> {
@@ -92,12 +99,12 @@ public final class ProjectDependenciesResolver extends TargetBuilder<BuildRootDe
 
     @Override
     public @NotNull List<ProjectDependenciesResolvingTarget> computeAllTargets(@NotNull JpsModel model) {
-      return List.of(new ProjectDependenciesResolvingTarget());
+      return Collections.singletonList(new ProjectDependenciesResolvingTarget());
     }
 
     @Override
     public @NotNull BuildTargetLoader<ProjectDependenciesResolvingTarget> createLoader(@NotNull JpsModel model) {
-      return new BuildTargetLoader<>() {
+      return new BuildTargetLoader<ProjectDependenciesResolvingTarget>() {
         @Override
         public ProjectDependenciesResolvingTarget createTarget(@NotNull String targetId) {
           return new ProjectDependenciesResolvingTarget();
