@@ -1,4 +1,18 @@
-// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+/*
+ * Copyright 2000-2017 JetBrains s.r.o.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.jetbrains.jps.incremental.groovy;
 
 import com.intellij.util.containers.ContainerUtil;
@@ -18,11 +32,10 @@ import org.jetbrains.jps.model.JpsModel;
 import org.jetbrains.jps.model.module.JpsModule;
 
 import java.io.File;
-import java.nio.file.Path;
 import java.util.*;
 
 public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescriptor> {
-  private final @NotNull JpsModule myModule;
+  @NotNull private final JpsModule myModule;
 
   CheckResourcesTarget(@NotNull JpsModule module, @NotNull Type targetType) {
     super(targetType);
@@ -34,8 +47,9 @@ public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescript
     return myModule.getName();
   }
 
+  @Nullable
   @Override
-  public @Nullable GroovyResourceRootDescriptor findRootDescriptor(@NotNull String rootId, @NotNull BuildRootIndex rootIndex) {
+  public GroovyResourceRootDescriptor findRootDescriptor(@NotNull String rootId, @NotNull BuildRootIndex rootIndex) {
     List<GroovyResourceRootDescriptor> descriptors = rootIndex.getRootDescriptors(new File(rootId),
                                                                                   Collections.singletonList((Type)getTargetType()),
                                                                                   null);
@@ -47,8 +61,9 @@ public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescript
     return ((Type)getTargetType()).myTests;
   }
 
+  @NotNull
   @Override
-  public @NotNull String getPresentableName() {
+  public String getPresentableName() {
     return "Check Groovy Resources for '" + myModule.getName() + "' " + (isTests() ? "tests" : "production");
   }
 
@@ -67,31 +82,35 @@ public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescript
     return result;
   }
 
+  @NotNull
   @Override
-  public @NotNull List<GroovyResourceRootDescriptor> computeRootDescriptors(@NotNull JpsModel model,
-                                                                            @NotNull ModuleExcludeIndex index,
-                                                                            @NotNull IgnoredFileIndex ignoredFileIndex,
-                                                                            @NotNull BuildDataPaths dataPaths) {
+  public List<GroovyResourceRootDescriptor> computeRootDescriptors(@NotNull JpsModel model,
+                                                                   @NotNull ModuleExcludeIndex index,
+                                                                   @NotNull IgnoredFileIndex ignoredFileIndex,
+                                                                   @NotNull BuildDataPaths dataPaths) {
     ResourcesTarget target = new ResourcesTarget(myModule, ResourcesTargetType.getInstance(isTests()));
     List<ResourceRootDescriptor> resources = target.computeRootDescriptors(model, index, ignoredFileIndex, dataPaths);
     return ContainerUtil.map(resources, descriptor -> new GroovyResourceRootDescriptor(descriptor, this));
   }
 
+  @NotNull
   @Override
-  public @NotNull Collection<File> getOutputRoots(@NotNull CompileContext context) {
-    return List.of(getOutputRoot(context).toFile());
+  public Collection<File> getOutputRoots(@NotNull CompileContext context) {
+    return Collections.singletonList(getOutputRoot(context));
   }
 
-  @NotNull Path getOutputRoot(CompileContext context) {
-    Path commonRoot = context.getProjectDescriptor().dataManager.getDataPaths().getDataStorageDir().resolve("groovyResources");
-    return commonRoot.resolve(myModule.getName() + File.separator + getTargetType().getTypeId());
+  @NotNull
+  File getOutputRoot(CompileContext context) {
+    File commonRoot = new File(context.getProjectDescriptor().dataManager.getDataPaths().getDataStorageRoot(), "groovyResources");
+    return new File(commonRoot, myModule.getName() + File.separator + getTargetType().getTypeId());
   }
 
   public static final Type PRODUCTION = new Type(false);
   public static final Type TESTS = new Type(true);
   static final List<Type> TARGET_TYPES = Arrays.asList(PRODUCTION, TESTS);
 
-  public @NotNull JpsModule getModule() {
+  @NotNull
+  public JpsModule getModule() {
     return myModule;
   }
 
@@ -121,20 +140,23 @@ public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescript
       myTests = tests;
     }
 
+    @NotNull
     @Override
-    public @NotNull List<CheckResourcesTarget> computeAllTargets(@NotNull JpsModel model) {
+    public List<CheckResourcesTarget> computeAllTargets(@NotNull JpsModel model) {
       return ContainerUtil.map(model.getProject().getModules(), module -> new CheckResourcesTarget(module, this));
     }
 
+    @NotNull
     @Override
-    public @NotNull BuildTargetLoader<CheckResourcesTarget> createLoader(@NotNull JpsModel model) {
+    public BuildTargetLoader<CheckResourcesTarget> createLoader(@NotNull JpsModel model) {
       final Map<String, JpsModule> modules = new HashMap<>();
       for (JpsModule module : model.getProject().getModules()) {
         modules.put(module.getName(), module);
       }
       return new BuildTargetLoader<CheckResourcesTarget>() {
+        @Nullable
         @Override
-        public @Nullable CheckResourcesTarget createTarget(@NotNull String targetId) {
+        public CheckResourcesTarget createTarget(@NotNull String targetId) {
           JpsModule module = modules.get(targetId);
           return module != null ? new CheckResourcesTarget(module, Type.this) : null;
         }
